--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ version: ${project.version}
 main: com.gonagutor.invitemanager.InviteManager
 api-version: 1.16
 authors: [ GonzaloAguadoTorres ]
+softdepend: [ PlaceholderAPI ]
 description: This plguins let players invite other players and prevent uninvited players to do anything
 commands:
   vengode:
@@ -13,3 +14,7 @@ commands:
     description: Este comando sirve para crear un codigo de invitación a tu nombre
     usage: /<command> [usos] [expira]
     permission: InviteManager.invitar
+  im:
+    description: Este comando muestra los comandos de admin
+    usage: /<command> [comando] [comando] [comando] [comando] [comando] [comando]
+    permissions: InviteManager.admin
